--- a/mobile/src/main/res/drawable/n_desk_bg.xml
+++ b/mobile/src/main/res/drawable/n_desk_bg.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="315"
-        android:endColor="#ebf2f6"
-        android:startColor="#c2d1dc" />
+        android:angle="225"
+        android:endColor="#c2d1dc"
+        android:startColor="#ebf2f6" />
 </shape>
