--- a/mobile/src/main/res/drawable/n_dh_bg.xml
+++ b/mobile/src/main/res/drawable/n_dh_bg.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="315"
-        android:endColor="#d6eee7"
+        android:angle="225"
+        android:endColor="#d6e1e7"
         android:startColor="#ebf1f5" />
     <corners android:radius="10dp" />
 </shape>
