--- a/mobile/src/main/res/drawable/n_tianqi_bg.xml
+++ b/mobile/src/main/res/drawable/n_tianqi_bg.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="270"
-        android:endColor="#e6eef1"
+        android:angle="225"
+        android:endColor="#e6edf2"
         android:startColor="#f7fafa" />
     <corners android:radius="10dp" />
 </shape>
