--- a/mobile/src/main/res/layout/content_l_music.xml
+++ b/mobile/src/main/res/layout/content_l_music.xml
@@ -36,7 +36,7 @@
             app:layout_heightPercent="35%h"
             app:layout_marginTopPercent="2%h">
 
-            <ImageView
+            <com.wow.carlauncher.common.view.CustomRoundAngleImageView
                 android:id="@+id/music_iv_cover"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
@@ -45,7 +45,8 @@
                 android:scaleType="centerCrop"
                 android:src="@mipmap/music_dlogo"
                 app:layout_heightPercent="100%h"
-                app:layout_widthPercent="100%h" />
+                app:layout_widthPercent="100%h"
+                app:radius="5dp" />
         </com.zhy.android.percent.support.PercentRelativeLayout>
 
         <TextView
