--- a/mobile/src/main/res/layout/activity_set.xml
+++ b/mobile/src/main/res/layout/activity_set.xml
@@ -40,19 +40,10 @@
                 <View style="@style/Interval" />
 
                 <com.wow.carlauncher.common.view.SetView
-                    android:id="@+id/sg_obd"
+                    android:id="@+id/sg_ble_device"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    st:titleEx="OBD"
-                    st:type="buttonB" />
-
-                <View style="@style/Interval" />
-
-                <com.wow.carlauncher.common.view.SetView
-                    android:id="@+id/sg_fangkong"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    st:titleEx="方控"
+                    st:titleEx="蓝牙设备"
                     st:type="buttonB" />
 
                 <View style="@style/Interval" />
@@ -62,15 +53,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     st:titleEx="悬浮窗"
-                    st:type="buttonB" />
-
-                <View style="@style/Interval" />
-
-                <com.wow.carlauncher.common.view.SetView
-                    android:id="@+id/sg_time"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    st:titleEx="时间和天气"
                     st:type="buttonB" />
 
                 <View style="@style/Interval" />
@@ -113,13 +95,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
 
-                <com.wow.carlauncher.view.activity.set.view.SFangKongView
-                    android:id="@+id/ll_fangkong"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone" />
-
-                <com.wow.carlauncher.view.activity.set.view.SObdView
+                <com.wow.carlauncher.view.activity.set.view.SBleDeviceView
                     android:id="@+id/ll_obd"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -127,12 +103,6 @@
 
                 <com.wow.carlauncher.view.activity.set.view.SPopupView
                     android:id="@+id/ll_popup"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="gone" />
-
-                <com.wow.carlauncher.view.activity.set.view.STimeView
-                    android:id="@+id/ll_time"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone" />
