--- a/mobile/src/main/res/layout/content_set_obd.xml
+++ b/mobile/src/main/res/layout/content_set_obd.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:paddingLeft="16dp"
         android:paddingTop="16dp"
-        android:text="OBD设置"
+        android:text="OBD"
         android:textColor="@color/colorPrimary"
         android:textSize="14sp" />
 
@@ -53,4 +53,39 @@
         st:type="checkB" />
 
     <View style="@style/Interval" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="16dp"
+        android:paddingTop="16dp"
+        android:text="方控"
+        android:textColor="@color/colorPrimary"
+        android:textSize="14sp" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_fangkong_select"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:summary="没有绑定方控"
+        st:titleEx="方控绑定"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_fangkong_remove"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="删除方控绑定"
+        st:type="buttonB" />
+
+    <View style="@style/Interval" />
+
+    <com.wow.carlauncher.common.view.SetView
+        android:id="@+id/sv_fangkong_impl_select"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        st:titleEx="方控协议"
+        st:type="buttonB" />
 </LinearLayout>
