--- a/mobile/src/main/res/drawable/n_music_progress.xml
+++ b/mobile/src/main/res/drawable/n_music_progress.xml
@@ -8,7 +8,7 @@
     <item android:id="@android:id/secondaryProgress">
         <clip>
             <shape>
-                <solid android:color="#5a6577" />
+                <solid android:color="#374157" />
             </shape>
 
         </clip>
@@ -16,9 +16,8 @@
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <solid android:color="#5a6577" />
+                <solid android:color="#374157" />
             </shape>
-
         </clip>
     </item>
 </layer-list>
