--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -5,7 +5,7 @@
     android:id="@+id/rl_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/n_dh_bg"
+    android:background="@drawable/n_l_item1_bg"
     android:orientation="vertical"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
@@ -44,6 +44,7 @@
                     android:includeFontPadding="false"
                     android:lines="1"
                     android:text="高德导航"
+                    android:textColor="#101933"
                     app:layout_textSizePercent="50%h" />
             </com.zhy.android.percent.support.PercentFrameLayout>
 
