--- a/mobile/src/main/res/layout/content_l_music.xml
+++ b/mobile/src/main/res/layout/content_l_music.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/n_yinyue_bg"
+    android:background="@drawable/n_l_item2_bg"
     tools:ignore="HardcodedText,RtlHardcoded">
 
     <com.zhy.android.percent.support.PercentLinearLayout
@@ -27,6 +27,7 @@
                 android:includeFontPadding="false"
                 android:lines="1"
                 android:text="音乐"
+                android:textColor="#101933"
                 app:layout_textSizePercent="50%h" />
         </com.zhy.android.percent.support.PercentFrameLayout>
 
@@ -70,7 +71,7 @@
             android:includeFontPadding="false"
             android:lines="1"
             android:text="作者"
-            android:textColor="#a9b0b7"
+            android:textColor="#7b8391"
             app:layout_heightPercent="7%h"
             app:layout_textSizePercent="4%h" />
 
