--- a/mobile/src/main/res/layout/content_l_obd.xml
+++ b/mobile/src/main/res/layout/content_l_obd.xml
@@ -14,14 +14,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <com.zhy.android.percent.support.PercentRelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             app:layout_marginLeftPercent="2%h"
             app:layout_marginRightPercent="2%h">
-
 
             <com.zhy.android.percent.support.PercentFrameLayout
                 android:id="@+id/fl_top2"
@@ -36,7 +34,7 @@
                     android:gravity="center"
                     android:includeFontPadding="false"
                     android:lines="1"
-                    android:text="车况"
+                    android:text="OBD车况"
                     android:textColor="#101933"
                     app:layout_textSizePercent="50%h" />
             </com.zhy.android.percent.support.PercentFrameLayout>
