--- a/mobile/src/main/res/layout/content_l_obd.xml
+++ b/mobile/src/main/res/layout/content_l_obd.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_base"
@@ -9,35 +9,43 @@
     android:orientation="vertical"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
-    <FrameLayout
+    <com.zhy.android.percent.support.PercentLinearLayout
         android:id="@+id/rl_moren"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_marginLeftPercent="2%h"
+        app:layout_marginRightPercent="2%h">
 
-        <com.zhy.android.percent.support.PercentRelativeLayout
+        <com.zhy.android.percent.support.PercentFrameLayout
+            android:id="@+id/fl_top2"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            app:layout_marginLeftPercent="2%h"
-            app:layout_marginRightPercent="2%h">
+            android:layout_height="0dp"
+            app:layout_heightPercent="12%h">
 
-            <com.zhy.android.percent.support.PercentFrameLayout
-                android:id="@+id/fl_top2"
+            <TextView
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
-                app:layout_heightPercent="12%h">
+                android:layout_height="match_parent"
+                android:layout_marginTop="5dp"
+                android:gravity="center"
+                android:includeFontPadding="false"
+                android:lines="1"
+                android:text="OBD车况"
+                android:textColor="#101933"
+                app:layout_textSizePercent="50%h" />
+        </com.zhy.android.percent.support.PercentFrameLayout>
 
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:includeFontPadding="false"
-                    android:lines="1"
-                    android:text="OBD车况"
-                    android:textColor="#101933"
-                    app:layout_textSizePercent="50%h" />
-            </com.zhy.android.percent.support.PercentFrameLayout>
-        </com.zhy.android.percent.support.PercentRelativeLayout>
-    </FrameLayout>
-</com.zhy.android.percent.support.PercentLinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:layout_marginPercent="5%w">
+
+            <TextView
+                android:id="@+id/tv_open_console"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="打开控制台" />
+        </LinearLayout>
+    </com.zhy.android.percent.support.PercentLinearLayout>
+</com.zhy.android.percent.support.PercentFrameLayout>
