--- a/mobile/src/main/res/layout/content_l_taiya.xml
+++ b/mobile/src/main/res/layout/content_l_taiya.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.zhy.android.percent.support.PercentLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.zhy.android.percent.support.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl_base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/n_l_item1_bg"
-    android:orientation="vertical"
     tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry">
 
     <com.zhy.android.percent.support.PercentLinearLayout
@@ -36,7 +35,25 @@
                 app:layout_textSizePercent="50%h" />
         </com.zhy.android.percent.support.PercentFrameLayout>
 
+        <com.zhy.android.percent.support.PercentLinearLayout
+            android:id="@+id/ll_msg"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:visibility="gone"
+            app:layout_marginPercent="5%w">
+
+            <TextView
+                android:id="@+id/tv_msg"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="OBD没有连接"
+                app:layout_textSizePercent="10%h" />
+        </com.zhy.android.percent.support.PercentLinearLayout>
+
         <LinearLayout
+            android:id="@+id/ll_ty"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -48,68 +65,68 @@
 
                 <TextView
                     android:id="@+id/tv_lt"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentTop="true"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="0.0\n0.0"
+                    android:background="@drawable/n_ty_bg"
+                    android:gravity="center_vertical|left"
+                    android:padding="15dp"
+                    android:text="左前\n0.0\n0.0"
                     android:textColor="#697380"
-                    app:layout_heightPercent="40%h"
-                    app:layout_textSizePercent="13%h"
-                    app:layout_widthPercent="40%w" />
+                    app:layout_textSizePercent="6%h" />
 
                 <TextView
                     android:id="@+id/tv_rt"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentRight="true"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="0.0\n0.0"
+                    android:background="@drawable/n_ty_bg"
+                    android:gravity="center_vertical|left"
+                    android:padding="15dp"
+                    android:text="右前\n0.0\n0.0"
                     android:textColor="#697380"
-                    app:layout_heightPercent="40%h"
-                    app:layout_textSizePercent="13%h"
-                    app:layout_widthPercent="40%w" />
+                    app:layout_textSizePercent="6%h" />
 
                 <ImageView
                     android:layout_width="0dp"
                     android:layout_height="0dp"
                     android:layout_centerInParent="true"
                     android:scaleType="centerInside"
-                    android:src="@mipmap/driving_black_tp_car"
+                    android:src="@mipmap/n_car2"
                     app:layout_heightPercent="40%h"
                     app:layout_widthPercent="40%w" />
 
                 <TextView
                     android:id="@+id/tv_lb"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_alignParentRight="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
                     android:layout_alignParentBottom="true"
                     android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="0.0\n0.0"
+                    android:background="@drawable/n_ty_bg"
+                    android:gravity="center_vertical|left"
+                    android:padding="15dp"
+                    android:text="左后\n0.0\n0.0"
                     android:textColor="#697380"
-                    app:layout_heightPercent="40%h"
-                    app:layout_textSizePercent="13%h"
-                    app:layout_widthPercent="40%w" />
+                    app:layout_textSizePercent="6%h" />
 
                 <TextView
                     android:id="@+id/tv_rb"
-                    android:layout_width="0dp"
-                    android:layout_height="0dp"
-                    android:layout_alignParentLeft="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
                     android:layout_alignParentBottom="true"
-                    android:gravity="center"
-                    android:text="0.0\n0.0"
+                    android:background="@drawable/n_ty_bg"
+                    android:gravity="center_vertical|left"
+                    android:padding="15dp"
+                    android:text="右后\n0.0\n0.0"
                     android:textColor="#697380"
-                    app:layout_heightPercent="40%h"
-                    app:layout_textSizePercent="13%h"
-                    app:layout_widthPercent="40%w" />
+                    app:layout_textSizePercent="6%h" />
             </com.zhy.android.percent.support.PercentRelativeLayout>
         </LinearLayout>
     </com.zhy.android.percent.support.PercentLinearLayout>
-</com.zhy.android.percent.support.PercentLinearLayout>
+</com.zhy.android.percent.support.PercentFrameLayout>
