准备开始修改主题

--- a/mobile/src/main/res/values/attrs.xml
+++ b/mobile/src/main/res/values/attrs.xml
@@ -46,4 +46,8 @@
         <attr name="right_bottom_radius" format="dimension" />
         <attr name="left_bottom_radius" format="dimension" />
     </declare-styleable>
+
+    <declare-styleable name="TextView">
+        <attr name="appTextTitle" format="color" />
+    </declare-styleable>
 </resources>
