--- a/mobile/src/main/res/layout/content_l_amap.xml
+++ b/mobile/src/main/res/layout/content_l_amap.xml
@@ -44,7 +44,7 @@
                     android:includeFontPadding="false"
                     android:lines="1"
                     android:text="高德导航"
-                    android:textColor="#101933"
+                    android:textColor="?attr/appTextTitle"
                     app:layout_textSizePercent="50%h" />
             </com.zhy.android.percent.support.PercentFrameLayout>
 
